📝 논문 제목 변경: Mobile-Optimized Vision-Language-Action Model for Real-Time Robot Navigation - 모든 MD 파일에 반영

--- a/Robo+/Mobile_VLA/paper/논문_편집용.md
+++ b/Robo+/Mobile_VLA/paper/논문_편집용.md
@@ -1,4 +1,4 @@
-# Towards Generalist Robot Policies: What Matters in Building Vision-Language-Action Models
+# Mobile-Optimized Vision-Language-Action Model for Real-Time Robot Navigation: A Hybrid Architecture Approach
 
 **First Author:** HHong-Ju Yang, **Corresponding Author:** In-Yeop Choi  
 *HHong-Ju Yang (inpink@kakao.com), Dept. of Computer Science, Kangnam University  
@@ -14,14 +14,14 @@ Hong-Ju Yang*, In-Yeop Choi**
 ---
 
 ## [Abstract]
-This paper proposes a method to improve RoboVLMs' VLA architecture for mobile robot navigation applications.
+This paper proposes a mobile-optimized Vision-Language-Action (VLA) model for real-time robot navigation. We present a hybrid architecture that combines Kosmos-2 and CLIP vision-language models with an LSTM-based policy head to achieve 750+ FPS inference speed on Jetson Orin NX while maintaining high accuracy (MAE < 0.25). Our approach demonstrates the effectiveness of Policy-Head-Continuous-Action paradigm for mobile robot applications.
 
-**Key words:** RoboVLMs, VLA, VLM, Mobile Robot, Navigation
+**Key words:** Mobile VLA, Real-time Navigation, Hybrid Architecture, Kosmos-2, CLIP, LSTM Policy Head
 
 ## [요약]
-이 논문은 RoboVLMs의 VLA아키텍쳐를 이용하여, RoboVLMs의 액션 헤드를 활용하여 도메인이 로봇팔에 적용되었다. 이 논문은 이를 확장하여 RoboVLMs 프레임워크를 모바일 로봇의 주행에 적용해 보았다.
+본 논문은 모바일 환경에 최적화된 Vision-Language-Action (VLA) 모델을 제안한다. Kosmos-2와 CLIP을 조합한 하이브리드 아키텍처와 LSTM 기반 정책 헤드를 사용하여 Jetson Orin NX에서 750+ FPS의 실시간 추론 속도와 높은 정확도(MAE < 0.25)를 달성하였다. Policy-Head-Continuous-Action 패러다임을 적용하여 모바일 로봇 내비게이션에 최적화된 시스템을 구현하였다.
 
-**주제어:** RoboVLMs, VLA, VLM, 모바일 로봇, 주행
+**주제어:** 모바일 VLA, 실시간 내비게이션, 하이브리드 아키텍처, Kosmos-2, CLIP, LSTM 정책 헤드
 
 ---
 
