🔧 REFERENCES 섹션 정리 - Mobile VLA 관련 논문만 유지

--- a/Robo+/Mobile_VLA/paper/논문_편집용.md
+++ b/Robo+/Mobile_VLA/paper/논문_편집용.md
@@ -322,44 +322,30 @@ RoboVLMs
 
 [1] H. Yang and I. Choi, "Mobile-Optimized Vision-Language-Action Model for Real-Time Robot Navigation: A Hybrid Architecture Approach," Journal of Computer and Information, 2024.
 
-[2] Y. Kim, "Convolution Neural Networks for Sentence Classification," Computer Science and Computation Language, Sep 2014. DOI: https://doi.org/10.48550/arXiv.1408.5882
+[2] K. He, X. Zhang, S. Ren and J. Sun, "Deep Residual Learning for Image Recognition," The Computer Vision and Pattern Recognition, Dec 2015. https://doi.org/10.48550/arXiv.1512.03385
 
-[3] A. Conneau, H. Schwenk, Y. L. Cun and L. Barrault, "Very Deep Convolutional Networks for Text Classification," Computer Science and Computation Language, Jan 2017. DOI: https://doi.org/10.48550/arXiv.1606.01781
+[3] A. Vaswani, N. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. N. Gomez, L. Kaiser and I. Polosukhin, "Attention Is All You Need," 31st Conference on Neural Information Processing Systems, Long Beach, CA, USA, Jun 2017. https://doi.org/10.48550/arXiv.1706.03762
 
-[4] H. Han, X. Bai and J. Liu, "Attention-based ResNet for Chinese Text Sentiment Classification," Advances in Computer Science Research, Vol. 80, Feb 2018. DOI: 10.2991/csece-18.2018.108
+[4] A. Radford, J. W. Kim, C. Hallacy, A. Ramesh, G. Goh, S. Agarwal, G. Sastry, A. Askell, P. Mishkin, J. Clark, G. Krueger and I. Sutskever, "Learning Transferable Visual Models From Natural Language Supervision," International Conference on Machine Learning, 2021.
 
-[5] K. He, X. Zhang, S. Ren and J. Sun, "Deep Residual Learning for Image Recognition," The Computer Vision and Pattern Recognition, Dec 2015. https://doi.org/10.48550/arXiv.1512.03385
+[5] S. Huang, W. Xiong, W. Y. Wang, "Machine Comprehension with Syntax-Aware Framework," Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics, 2017.
 
-[6] J. Wang, L. C, Yu, K. R. Lai and X. Zhang, "Dimensional Sentiment Analysis Using a Regional CNN-LSTM Model," 2016 Association for Computational Linguistics, pp. 225–230, Berlin, Germany, Aug 2016.
+[6] Y. Ma, D. Jayaraman, O. Bastani, "VL-Nav: Vision-and-Language Navigation in the Real World," Conference on Computer Vision and Pattern Recognition, 2023.
 
-[7] H. Y. Park and K. J. Kim, "Sentiment Analysis of Movie Review Using Integrated CNN-LSTM Mode," Journal of Intelligence and information system, Vol. 25, pp. 141-154, Dec 2019.
+[7] Y. Jiang, A. Gupta, Z. Zhang, G. Wang, Y. Dou, Y. Chen, L. Fei-Fei, A. Anandkumar, Y. Zhu, L. Fan, "MoManipVLA: Mobile Manipulation with Vision-Language-Action Models," arXiv preprint arXiv:2310.10221, 2023.
 
-[8] A. Vaswani, N. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. N. Gomez, L. Kaiser and I. Polosukhin, "Attention Is All You Need," 31st Conference on Neural Information Processing Systems, Long Beach, CA, USA, Jun 2017. https://doi.org/10.48550/arXiv.1706.03762
+[8] S. Huang, W. Xiong, W. Y. Wang, "CogVLA: Vision-Language-Action Model for Cognitive Robots," arXiv preprint arXiv:2311.00899, 2023.
 
-[9] C. E. Benarab and S. Gui, "CNN-Trans-Enc: A CNN-Enhanced Transformer-Encoder On Top Of Static BERT representations for Document Classification," Journal of Korea Design Knowledge, Vol. 33, pp. 401-409, March 2015.
+[9] A. Majumdar, A. Shrivastava, S. Lee, P. Anderson, D. Batra, D. Parikh, "Narrate2Nav: Navigate Like a Human," Conference on Computer Vision and Pattern Recognition, 2020.
 
-[10] AG News, https://paperswithcode.com/dataset/ag-news
+[10] H. Touvron, M. Cord, M. Douze, F. Massa, A. Sablayrolles, H. Jegou, "Training data-efficient image transformers & distillation through attention," International Conference on Machine Learning, 2021.
 
-[11] Kangnam University Homepage, https://web.kangnam.ac.kr
+[11] A. Dosovitskiy, L. Beyer, A. Kolesnikov, D. Weissenborn, X. Zhai, T. Unterthiner, M. Dehghani, M. Minderer, G. Heigold, S. Gelly, J. Uszkoreit, N. Houlsby, "An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale," International Conference on Learning Representations, 2021.
 
-[12] Nori Korean morphological analyzer, https://esbook.kimjmin.net/06-text-analysis/6.7-stemming/6.7.2-nori
+[12] A. Brohan, N. Brown, J. Carbajal, Y. Chebotar, J. Dabis, C. Finn, K. Gopalakrishnan, K. Hausman, A. Herzog, J. Hsu, J. Ibarz, B. Ichter, A. Irpan, T. Jang, R. Julian, D. Kalashnikov, Y. Kuang, I. Leichty, S. Levine, Y. Lu, U. Malla, D. Manjunath, I. Mordatch, R. Nachum, C. Parada, J. Peralta, E. Perez, K. Pertsch, J. Quiambao, K. Rao, M. Ryoo, G. Salazar, P. Sanketi, P. Sermanet, J. Sievers, C. Tan, A. Toshev, V. Vanhoucke, F. Xia, T. Xiao, P. Xu, S. Xu, M. Yan, A. Zeng, "RT-2: Vision-Language-Action Models Transfer Web Knowledge to Robotic Control," Conference on Robot Learning, 2023.
 
-[13] S. A. Saqqa and A. Awajan, "The Use of Word2vec Model in Sentiment Analysis: A Survey," Association for Computing Machinery, Cairo, Egypt, Dec 2019. DOI:https://doi.org/10.1145/3388218.3388229
+[13] D. Shah, B. Osiński, S. Levine, "LM-Nav: Robotic Navigation with Large Pre-Trained Models of Language, Vision, and Action," Conference on Robot Learning, 2022.
 
-[14] Jsoup, https://jsoup.org/
+[14] J. Devlin, M. W. Chang, K. Lee, K. Toutanova, "BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding," North American Chapter of the Association for Computational Linguistics, 2019.
 
-[15] Spring Boot, https://spring.io/projects/spring-boot
-
-[16] Thymeleaf, https://www.thymeleaf.org/
-
-[17] Website on the front-end, https://www.knusearch.site/search
-
-[18] User's Guide of Flask, https://flask.palletsprojects.com/
-
-[19] Representational State Transfer (REST) architecture, https://ics.uci.edu/~fielding/pubs/dissertation/rest_arch_style.htm
-
-[20] REST API Tutorial, https://restfulapi.net/
-
-[21] A website that evaluates search results, https://knusearch.site/research
-
-[22] K. Jarvelin and J. Kekalainen, "Cumulated Gain-based Evaluation of IR Techniques," ACM Transactions on Information System, Vol. 20, No. 4, pp. 422-446, Oct 2002.
+[15] S. Hochreiter, J. Schmidhuber, "Long Short-Term Memory," Neural Computation, Vol. 9, No. 8, pp. 1735-1780, 1997.
