--- a/Robo+/Mobile_VLA/paper/논문_편집용.md
+++ b/Robo+/Mobile_VLA/paper/논문_편집용.md
@@ -322,29 +322,29 @@ RoboVLMs
 
 [1] H. Yang and I. Choi, "Mobile-Optimized Vision-Language-Action Model for Real-Time Robot Navigation: A Hybrid Architecture Approach," Journal of Computer and Information, 2024.
 
-[2] K. He, X. Zhang, S. Ren and J. Sun, "Deep Residual Learning for Image Recognition," The Computer Vision and Pattern Recognition, Dec 2015. https://doi.org/10.48550/arXiv.1512.03385
+[2] A. Brohan, N. Brown, J. Carbajal, Y. Chebotar, J. Dabis, C. Finn, K. Gopalakrishnan, K. Hausman, A. Herzog, J. Hsu, J. Ibarz, B. Ichter, A. Irpan, T. Jang, R. Julian, D. Kalashnikov, Y. Kuang, I. Leichty, S. Levine, Y. Lu, U. Malla, D. Manjunath, I. Mordatch, R. Nachum, C. Parada, J. Peralta, E. Perez, K. Pertsch, J. Quiambao, K. Rao, M. Ryoo, G. Salazar, P. Sanketi, P. Sermanet, J. Sievers, C. Tan, A. Toshev, V. Vanhoucke, F. Xia, T. Xiao, P. Xu, S. Xu, M. Yan, A. Zeng, "RT-2: Vision-Language-Action Models Transfer Web Knowledge to Robotic Control," Conference on Robot Learning, 2023.
 
-[3] A. Vaswani, N. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. N. Gomez, L. Kaiser and I. Polosukhin, "Attention Is All You Need," 31st Conference on Neural Information Processing Systems, Long Beach, CA, USA, Jun 2017. https://doi.org/10.48550/arXiv.1706.03762
+[3] A. Brohan, Y. Chebotar, C. Finn, K. Hausman, K. Gopalakrishnan, A. Irpan, P. Sermanet, S. Levine, "RT-1: Robotics Transformer for Real-World Control at Scale," Conference on Robot Learning, 2023.
 
-[4] A. Radford, J. W. Kim, C. Hallacy, A. Ramesh, G. Goh, S. Agarwal, G. Sastry, A. Askell, P. Mishkin, J. Clark, G. Krueger and I. Sutskever, "Learning Transferable Visual Models From Natural Language Supervision," International Conference on Machine Learning, 2021.
+[4] D. Shah, B. Osiński, S. Levine, "LM-Nav: Robotic Navigation with Large Pre-Trained Models of Language, Vision, and Action," Conference on Robot Learning, 2022.
 
-[5] S. Huang, W. Xiong, W. Y. Wang, "Machine Comprehension with Syntax-Aware Framework," Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics, 2017.
+[5] Y. Ma, D. Jayaraman, O. Bastani, "VL-Nav: Vision-and-Language Navigation in the Real World," Conference on Computer Vision and Pattern Recognition, 2023.
 
-[6] Y. Ma, D. Jayaraman, O. Bastani, "VL-Nav: Vision-and-Language Navigation in the Real World," Conference on Computer Vision and Pattern Recognition, 2023.
+[6] Y. Jiang, A. Gupta, Z. Zhang, G. Wang, Y. Dou, Y. Chen, L. Fei-Fei, A. Anandkumar, Y. Zhu, L. Fan, "MoManipVLA: Mobile Manipulation with Vision-Language-Action Models," arXiv preprint arXiv:2310.10221, 2023.
 
-[7] Y. Jiang, A. Gupta, Z. Zhang, G. Wang, Y. Dou, Y. Chen, L. Fei-Fei, A. Anandkumar, Y. Zhu, L. Fan, "MoManipVLA: Mobile Manipulation with Vision-Language-Action Models," arXiv preprint arXiv:2310.10221, 2023.
+[7] S. Huang, W. Xiong, W. Y. Wang, "CogVLA: Vision-Language-Action Model for Cognitive Robots," arXiv preprint arXiv:2311.00899, 2023.
 
-[8] S. Huang, W. Xiong, W. Y. Wang, "CogVLA: Vision-Language-Action Model for Cognitive Robots," arXiv preprint arXiv:2311.00899, 2023.
+[8] A. Majumdar, A. Shrivastava, S. Lee, P. Anderson, D. Batra, D. Parikh, "Narrate2Nav: Navigate Like a Human," Conference on Computer Vision and Pattern Recognition, 2020.
 
-[9] A. Majumdar, A. Shrivastava, S. Lee, P. Anderson, D. Batra, D. Parikh, "Narrate2Nav: Navigate Like a Human," Conference on Computer Vision and Pattern Recognition, 2020.
+[9] A. Radford, J. W. Kim, C. Hallacy, A. Ramesh, G. Goh, S. Agarwal, G. Sastry, A. Askell, P. Mishkin, J. Clark, G. Krueger and I. Sutskever, "Learning Transferable Visual Models From Natural Language Supervision," International Conference on Machine Learning, 2021.
 
 [10] H. Touvron, M. Cord, M. Douze, F. Massa, A. Sablayrolles, H. Jegou, "Training data-efficient image transformers & distillation through attention," International Conference on Machine Learning, 2021.
 
 [11] A. Dosovitskiy, L. Beyer, A. Kolesnikov, D. Weissenborn, X. Zhai, T. Unterthiner, M. Dehghani, M. Minderer, G. Heigold, S. Gelly, J. Uszkoreit, N. Houlsby, "An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale," International Conference on Learning Representations, 2021.
 
-[12] A. Brohan, N. Brown, J. Carbajal, Y. Chebotar, J. Dabis, C. Finn, K. Gopalakrishnan, K. Hausman, A. Herzog, J. Hsu, J. Ibarz, B. Ichter, A. Irpan, T. Jang, R. Julian, D. Kalashnikov, Y. Kuang, I. Leichty, S. Levine, Y. Lu, U. Malla, D. Manjunath, I. Mordatch, R. Nachum, C. Parada, J. Peralta, E. Perez, K. Pertsch, J. Quiambao, K. Rao, M. Ryoo, G. Salazar, P. Sanketi, P. Sermanet, J. Sievers, C. Tan, A. Toshev, V. Vanhoucke, F. Xia, T. Xiao, P. Xu, S. Xu, M. Yan, A. Zeng, "RT-2: Vision-Language-Action Models Transfer Web Knowledge to Robotic Control," Conference on Robot Learning, 2023.
+[12] K. He, X. Zhang, S. Ren and J. Sun, "Deep Residual Learning for Image Recognition," The Computer Vision and Pattern Recognition, Dec 2015. https://doi.org/10.48550/arXiv.1512.03385
 
-[13] D. Shah, B. Osiński, S. Levine, "LM-Nav: Robotic Navigation with Large Pre-Trained Models of Language, Vision, and Action," Conference on Robot Learning, 2022.
+[13] A. Vaswani, N. Shazeer, N. Parmar, J. Uszkoreit, L. Jones, A. N. Gomez, L. Kaiser and I. Polosukhin, "Attention Is All You Need," 31st Conference on Neural Information Processing Systems, Long Beach, CA, USA, Jun 2017. https://doi.org/10.48550/arXiv.1706.03762
 
 [14] J. Devlin, M. W. Chang, K. Lee, K. Toutanova, "BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding," North American Chapter of the Association for Computational Linguistics, 2019.
 
